[package]
name = "todo-actix"
version = "0.1.0"
authors = ["Owen Craston <owen.craston@shopify.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
serde = { version = "1.0", features = ["derive"] }
config = "0.10.1"
dotenv = "0.15.0"